--- a/src/main/resources/principal/hello-view.fxml
+++ b/src/main/resources/principal/hello-view.fxml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="principal.PrincipalController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane layoutX="29.0" layoutY="30.0" prefHeight="178.0" prefWidth="525.0">
+         <children>
+            <MenuButton layoutX="45.0" layoutY="64.0" mnemonicParsing="false" text="MenuButton">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </MenuButton>
+            <MenuButton layoutX="385.0" layoutY="65.0" mnemonicParsing="false" text="MenuButton">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </MenuButton>
+            <TextField layoutX="147.0" layoutY="14.0" prefHeight="25.0" prefWidth="246.0" />
+            <Button layoutX="236.0" layoutY="97.0" mnemonicParsing="false" text="Button" />
+         </children>
+      </Pane>
+      <Pane layoutX="38.0" layoutY="271.0" prefHeight="93.0" prefWidth="525.0">
+         <children>
+            <Label layoutX="128.0" layoutY="7.0" prefHeight="79.0" prefWidth="271.0" text="                               0.92 EUR" />
+         </children>
+      </Pane>
+   </children>
+</AnchorPane>
