--- a/src/main/resources/view/hello-view.fxml
+++ b/src/main/resources/view/hello-view.fxml
@@ -1,53 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="488.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PrincipalController">
-   <children>
-      <Label layoutX="209.0" layoutY="57.0" prefHeight="29.0" prefWidth="87.0" text="Quantidade: ">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtQuantidade" layoutX="297.0" layoutY="56.0" text="00">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label layoutX="199.0" layoutY="234.0" text="De:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Label fx:id="resultado" layoutX="259.0" layoutY="384.0" text="Resultado:">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="200.0" layoutY="283.0" text="Para: ">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Button fx:id="btnConverter" layoutX="217.0" layoutY="345.0" mnemonicParsing="false" onAction="#onBtnConverterClick" prefHeight="25.0" prefWidth="160.0" text="Converter" />
-      <ComboBox fx:id="cbxMoedaPara" layoutX="283.0" layoutY="280.0" prefWidth="150.0" promptText="BRL">
-         <items>
-         <FXCollections fx:factory="observableArrayList">
-         </FXCollections>
-         </items>
-      </ComboBox>
-      <ComboBox fx:id="cbxMoedaDe" layoutX="283.0" layoutY="232.0" prefWidth="150.0" promptText="USD">
-         <items>
-            <FXCollections fx:factory="observableArrayList">
-            </FXCollections>
-         </items>
-      </ComboBox>
-   </children>
+    <children>
+        <Label layoutX="168.0" layoutY="139.0" prefHeight="29.0" prefWidth="87.0" text="Quantidade: ">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <TextField fx:id="txtQuantidade" layoutX="276.0" layoutY="139.0" prefHeight="30.0" prefWidth="150.0">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </TextField>
+        <Label layoutX="170.0" layoutY="190.0" text="De:">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <Label fx:id="resultado" alignment="CENTER" contentDisplay="CENTER" layoutX="170.0" layoutY="344.0" prefHeight="69.0" prefWidth="275.0" textAlignment="CENTER" wrapText="true">
+            <font>
+                <Font name="System Bold" size="24.0" />
+            </font>
+        </Label>
+        <Label layoutX="170.0" layoutY="225.0" prefHeight="20.0" prefWidth="40.0" text="Para: ">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <Button fx:id="btnConverter" layoutX="220.0" layoutY="268.0" mnemonicParsing="false" onAction="#onBtnConverterClick" prefHeight="25.0" prefWidth="160.0" text="Converter" />
+        <ComboBox fx:id="cbxMoedaPara" editable="true" layoutX="276.0" layoutY="222.0" prefWidth="150.0">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                </FXCollections>
+            </items>
+        </ComboBox>
+        <ComboBox fx:id="cbxMoedaDe" editable="true" layoutX="276.0" layoutY="187.0" prefWidth="150.0">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                </FXCollections>
+            </items>
+        </ComboBox>
+      <ImageView fitHeight="118.0" fitWidth="150.0" layoutX="426.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/img1.png" />
+         </image>
+      </ImageView>
+        <Button fx:id="btnLimpar" layoutX="220.0" layoutY="303.0" mnemonicParsing="true" onAction="#onBtnLimparClick" prefHeight="25.0" prefWidth="160.0" text="Limpar" />
+    </children>
 </AnchorPane>
